# launcher-ck-tauri

./: .gitignore  ck-launcher.key.pub  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  download.rs  error.rs  game.rs  lib.rs  main.rs  patreon.rs  zip.rs
src/components/: BottomBar.tsx  DownloadModal.tsx  MainContent.tsx  SettingsModal.tsx  SideBar.tsx  TopBar.tsx  UserModal.tsx
src/stores/: useAppStore.ts
src/types/: appState.ts  config.ts  game.ts  modal.ts  settings.ts  statusMessage.ts
