[package]
name = "launcher-ck-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
windows_subsystem = "windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_ck_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"
window-shadows = "0.2"
open = "5.0"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-clipboard-manager = "2.2.0"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
