[package]
name = "launcher-ck-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_ck_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "*", default-features = false, features = [
    "config-json",
] }

[dependencies]
bunny-cdn-wrapper = { version = "*", git = "https://github.com/ViridianLink/bunny-cdn-api" }
patreon-api = { version = "*", git = "https://github.com/ViridianLink/patreon-api.git" }
tauri = { version = "*", default-features = false, features = ["wry"] }
tauri-plugin-shell = { version = "*", default-features = false }
# tauri-plugin-deep-link = { version = "*", default-features = false }
tauri-plugin-dialog = { version = "*", default-features = false }
tauri-plugin-opener = { version = "*", default-features = false }
# tauri-plugin-single-instance = { version = "*", features = ["deep-link"] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
dirs = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
tokio = { version = "*", default-features = false, features = ["fs"] }
walkdir = { version = "*", default-features = false }
zip = { version = "*", default-features = false, features = ["deflate"] }
semver = { version = "*", default-features = false, features = ["serde"] }
lazy_static = { version = "*", default-features = false }
regex = { version = "*", default-features = false }
httparse = { version = "*", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
